Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53002

CMake project with Qt 5.7 and c++14 does not compile in OSX

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.7.0 RC
    • 5.7.0 Beta
    • Build System: CMake
    • None
    • OSX 10.11.4; Qt 5.7 beta ; XCode 7.3; CMake 3.5.2; QtCreator 4 rc1
    • macOS

      C++14 code does not compile with Qt 5.7 using a CMake project.
      If we choose Qt 5.6 kit compiles Ok, choosing Qt5.7 we got this error:
      no member 'make_unique' in namespace std

      If we use the .pro project that is in the archive all goes ok compiling c++14 with Qt5.7 (is seems to be something with Qt5.7 + CMake)

        1. test_code.zip
          1.0 kB
          Nuno Nunes
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            krf Kevin Funk
            nuno_nunes Nuno Nunes
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes