Insert workaround for compilation error

See https://bugreports.qt.io/browse/QTBUG-53002 for details.

Using std::make_unique fails to compile even though gcc 6+ defaults to
the C++14 standard. This turns out to be due to Qt's config files
inserting a C++11 requirement.

The workaround suggested in the bug report is to specify the C++
standard explicitly in cmake, not using compiler flags, but by using a
specific cmake keyword.