player.cpp
@@ -4,6 +4,7 @@ Player::Player()
 {
     // Create the four colored pieces
     for ( auto& piece : pieces ) {
+        piece = std::make_unique<Piece>();
     }
 }
 
